# RTL-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
ReflectionTemplateLib/: CMakeLists.txt
ReflectionTemplateLib/rtl/: rtl_constants.h  rtl_method_erased_target.h  rtl_typeid.h
ReflectionTemplateLib/rtl/builder/: Builder.h  ConstructorBuilder.h  RecordBuilder.h  Reflect.h  ReflectionBuilder.h
ReflectionTemplateLib/rtl/detail/inc/: CxxReflection.h  RObjectUPtr.h
ReflectionTemplateLib/rtl/detail/src/: CxxReflection.cpp  RObjectConverters_string.cpp
ReflectionTemplateLib/rtl/dispatch/: aware_return_n_target.h  aware_return_n_target_const.h  method_lambda.h
ReflectionTemplateLib/rtl/inc/: CxxMirror.h  Function.h  Record.h  Record.hpp  view.hpp
ReflectionTemplateLib/rtl/src/: CxxMirror.cpp  CxxMirrorToJson.cpp  Function.cpp
docs/: DESIGN_PRINCIPLES_AND_FEATURES.md  RTL_SYNTAX_AND_SEMANTICS.md  WHY_CPP_REFLECTION_MATTERS.md  benchmark_summary.md
rtl-demo/: CMakeLists.txt  main.cpp
rtl-demo/MyReflection/: MyReflection.cpp  MyReflection.h
rtl-demo/Person/: Person.h
scripts/: download-latest-binaries.sh
